# uhttpmock

./: .gitlab-ci.yml  HACKING  Makefile.in  NEWS  README  aclocal.m4  aminclude_static.am  config.h.in  configure  meson.build  meson_options.txt  uhttpmock.doap
debian/: changelog  control  control.in  copyright  libuhttpmock-0.0-0.symbols  libuhttpmock-0.0-dev.install  libuhttpmock-1.0-1.symbols  libuhttpmock-dev.install  not-installed  rules  watch
debian/upstream/: metadata
libuhttpmock/: libuhttpmock.map  meson.build  uhm-message-private.h  uhm-message.c  uhm-message.h  uhm-resolver.c  uhm-server.c  uhm-server.h  uhm-version.h
libuhttpmock/docs/: Makefile.in  libuhttpmock-0.0.types  libuhttpmock-1.0-docs.xml  meson.build
libuhttpmock/docs/html/: UhmResolver.html  UhmServer.html  annotation-glossary.html  ch01.html  ch02.html  ch03.html  ch04.html  index.html  libuhttpmock-0.0-Version-Information.html  libuhttpmock-0.0.devhelp2  pt01.html  pt02.html  pt03.html  pt04.html
libuhttpmock/tests/: Makefile.in  meson.build  resolver.c  server.c
